--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -246,16 +246,51 @@ body {
   bottom: -110px;
 }
 
-.sec4 .sec4-cont .sec4-cards .owl-item {
-  width: 300px;
-  height: 400px;
+.sec4 {
+  padding: 20px 0;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card:hover img {
+  z-index: -1;
+  transition: 1s;
 }
 .sec4 .sec4-cont .sec4-cards .sec4-card {
-  height: 100%;
+  background: linear-gradient(0deg, rgba(193, 86, 39, 0.7) 0%, rgba(193, 86, 39, 0.7) 100%);
+  position: relative;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img img {
+  width: 382;
+  height: 483px;
+  position: absolute;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img-content {
+  color: white;
+  padding: 0 20px;
 }
 .sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img-content .sec4-card-img-btn {
   text-align: center;
   width: -moz-fit-content;
   width: fit-content;
-  margin: 40% auto;
+  margin: 0 auto;
+  padding: 150px 0;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img-content .sec4-card-img-btn .btn-content {
+  border: 1px solid white;
+  border-radius: 25px;
+  padding: 10px 26px;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img-content .sec4-card-img-head {
+  width: 100%;
+  -webkit-text-size-adjust: 100%;
+     -moz-text-size-adjust: 100%;
+          text-size-adjust: 100%;
+  font-size: 37.5px;
+  font-weight: 400;
+  padding: 10px 0;
+  font-family: "F37 Caslon", serif;
+}
+.sec4 .sec4-cont .sec4-cards .sec4-card .sec4-card-img-content .sec4-card-img-subtext {
+  border-top: 1px solid white;
+  font-size: 15px;
+  padding-top: 10px;
+  padding-bottom: 30px;
 }/*# sourceMappingURL=skeleton.css.map */
